// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`RTLToggle > checked > renders 1`] = `
<span
  class="sc-beySPh bvMhcI"
>
  <label
    class="sc-guDLey jIjZV"
  >
    <input
      aria-controls="rtl-status"
      checked=""
      class="sc-dmyCSP cjnXpi"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLQSwg idtycW"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDLKkx ddkIkP"
    id="rtl-status"
    role="region"
  >
    Right-to-left
  </span>
</span>
`;

exports[`RTLToggle > default > renders 1`] = `
<span
  class="sc-beySPh bvMhcI"
>
  <label
    class="sc-guDLey hVGNKc"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dmyCSP cjnXpi"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLQSwg jbklbO"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDLKkx ddkIkP"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;

exports[`RTLToggle > unchecked > renders 1`] = `
<span
  class="sc-beySPh bvMhcI"
>
  <label
    class="sc-guDLey hVGNKc"
  >
    <input
      aria-controls="rtl-status"
      class="sc-dmyCSP cjnXpi"
      data-testid="rtl-toggle-input"
      type="checkbox"
    />
    <a
      class="sc-hLQSwg jbklbO"
    >
      Enable right-to-left
    </a>
  </label>
  <span
    aria-live="polite"
    class="sc-eDLKkx ddkIkP"
    id="rtl-status"
    role="region"
  >
    Left-to-right
  </span>
</span>
`;
